# DiWl

./: .gitignore  README.md  README_CN.md  README_RUN_TEST.md  TASK.md
diwl-contract/: Cargo.toml  build.sh
diwl-contract/src/: lib.rs
diwl-front-end/: Cargo.toml  LICENSE-MIT  README.md  bundle.js  index.html  read_wasm.js  tampermonkey_load.js  trunk.js  wasm_data.js  wasm_init.js
diwl-front-end/src/: app.rs  data.rs  fbutton.rs  main.rs  marking.rs  popup_window.rs  ui_style.rs  ui_tools.rs  websocket.rs
polkadot_api/: cp.sh  data.js  lib.js  package-lock.json  package.json  test.js  webpack.config.cjs
test/: address_contract.txt  base.js  call.js  deploy.js  initUlist.js  initWlist.js  package-lock.json  package.json  test.js  test_key.js  webpack.config.cjs  word_list.txt
test/test_contract/: diwl_contract.contract  metadata.json
