[package]
name = "trunk-template"
version = "0.1.0"
edition = "2021"
description = "Template for starting a Yew project using Trunk"
readme = "README.md"
repository = "https://github.com/yewstack/yew-trunk-minimal-template"
license = "MIT OR Apache-2.0"
keywords = ["yew", "trunk"]
categories = ["gui", "wasm", "web-programming"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
gloo-console = "0.2.3"
gloo-timers = {version = "0.2.6",features = ["futures"]}

js-sys = "0.3.61"
wasm-bindgen-futures = "0.4.34"
web-sys = "0.3.61"
yew = { version="0.20", features=["csr"] }

serde = { version = "1.0", features = ["derive"] }
wasm-bindgen = "0.2.84"
serde-wasm-bindgen = "0.4"
stylist = "0.11"
futures = "0.3.26"
futures-util = "0.3.26"
gloo = "0.8.0"
gloo-net = "0.2.6"
regex = "1.7.1"
reqwasm = "0.5.0"
serde_json = "1.0.93"


